  * debian/backport-ppa: Drop natty (EOL), add raring for 9.2.
  * debian/supported-versions: Add Ubuntu 13.04.
  * testsuite: Run with overlaid tmpfses on the postgresql /etc/ and /var
    directories in an unshared namespace. This is more robust against
    protecting existing clusters, always cleans up after itself properly, and
    also speeds up testing.

  [ Christoph Berg ]
  * testsuite: Move 'disk full' tests from 030_errors to new file
    031_errors_disk_full, and skip tests when /usr/bin/unshare is missing.
    (Compatibility workaround for lenny.)
  * testsuite: Note that Test::More 0.87 is required for done_testing() in
    170_extensions.
  * testsuite 005_PgCommon: Add next_free_port tests (using /bin/nc).
  * supported-versions: Make output configurable via $PG_SUPPORTED_VERSIONS,
    ~/.pg_supported_versions, and /etc/postgresql-common/supported_versions.
    (Closes: #646700)
  * supported-versions: Add debian-backports and pgdg sections.
    (Closes: #650680)
  * For bpo and pgdg builds (determined by the version number), create
    /etc/postgresql-common/supported_versions with appropriate content.
  * Replace version string comparisions in perl scripts to use numerical
    operators, so things will continue to work when PostgreSQL 10.0 is
    released.
  * debian/rules: Use sort -n for sorting supported-versions output.
  * debian/rules: Use apt-cache policy instead of apt-cache show to determine
    the "candidate" logrotate version.
  * testsuite 020_create_sql_remove: Fix plperl test to work with 8.2.
  * testsuite 085_pg_ctl.conf: Skip for 8.2.

 -- Christoph Berg <myon@debian.org>  Thu, 22 Nov 2012 14:24:27 +0100

postgresql-common (136) experimental; urgency=low

  [ Martin Pitt ]
  * debian/backport-ppa: Do first upload with orig tarball, subsequent ones
    without.
  * debian/backport-ppa: Do not run lintian.
  * debian/backport-ppa: When building postgresql-9.1 for lucid, drop the